dark mode fixes

--- a/packages/ui/src/app/components/token/components/token-stake/token-stake.component.less
+++ b/packages/ui/src/app/components/token/components/token-stake/token-stake.component.less
@@ -6,5 +6,5 @@
 }
 
 .info-item {
-  @apply flex items-center justify-between flex-1 w-full px-6 py-2 mt-2 rounded-3xl bg-backgrounds-secondary dark:bg-backgrounds-secondary-dark min-h-14;
+  @apply flex items-center justify-between flex-1 w-full px-6 py-2 mt-2 rounded-3xl min-h-14;
 }
